fix => redimension mobile  media queries

--- a/app/Portal.Consultoras.Web/Content/Css/Mobile/RevistaDigital/RedimensionLandingRD.css
+++ b/app/Portal.Consultoras.Web/Content/Css/Mobile/RevistaDigital/RedimensionLandingRD.css
@@ -1,13 +1,37 @@
-﻿.content_item_home_palanca {
-    min-width: 20%;
-    margin: 0 1% 2% 1%;
-    max-width: 25%;
-}
-
-.box_producto_mobile_fix {
+﻿.box_producto_mobile_fix {
     margin-left: 0 !important;
     margin-right: 0 !important;
+    height: 276px;
+}
+.content_item_home_palanca {
+    margin: 0 1% 3% 1%;
+    width: auto;
+    
 }
 
+@media screen and (min-width:320px) and (max-width:690px) {
 
-   
+    .content_item_home_palanca {
+        margin: 0 1% 0% 1%;
+        margin-bottom: 30px;
+    }
+}
+@media screen and (min-width:691px) and (max-width:735px) {
+    .content_item_home_palanca {
+        margin: 0 2.5% 4% 2.5%;
+    }
+}
+
+@media screen and (min-width:736px) and (max-width:940px) {
+
+    .content_item_home_palanca {
+        margin: 0 1% 3% 1%;
+    }
+}
+@media screen and (min-width:941px) {
+
+    .content_item_home_palanca {
+        margin: 0 1% 3% 1%;
+    }
+
+}
